# FasterAPI

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  1MRC_CHALLENGE_COMPLETE.md  ALGORITHM_IMPORT_COMPLETE.md  ASYNC_FEATURES.md  ASYNC_IO_COMPLETE.md  ASYNC_IO_STATUS.md  ASYNC_STATUS.md  BENCHMARK_COMPLETION.md  BENCHMARK_RESULTS.md  BUILD.md  CLAUDE.md  CMakeLists.txt  COMPLETE_SYSTEM.md  DOCUMENTATION_SUMMARY.md  FASTAPI_COMPAT_PLAN.md  FEATURES.md  FINAL_STATUS.md  FUTURE_PERFORMANCE.md  LIBRARY_INTEGRATION_STRATEGY.md  LICENSE  LOCKFREE_COROIO_STATUS.md  MAKE_IT_FASTER.md  MANIFEST.in  Makefile  NATIVE_LOCKFREE_IMPLEMENTATION.md  NATIVE_TYPES_DESIGN.md  OPTIMIZATIONS_IMPLEMENTED.md  OPTIMIZATION_STATUS.md  OVERALL_STATUS.md  PERFORMANCE_NOTES.md  PHASE1_COMPLETE.md  PHASE1_TEST_STATUS.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  PROTOCOL_ANALYSIS.md  PROTOCOL_REFERENCE.md  PYTHON_INTEROP_OPTIMIZATION_SUMMARY.md  (+73 more)
.github/workflows/: ci.yml
CPM_modules/: Findlibuv.cmake  Findmimalloc.cmake  Findsimdjson.cmake  Findzstd.cmake
benchmarks/: BENCHMARK_QUICK_START.md  HTTP1_BENCHMARK_GUIDE.md  Makefile  README.md  REFACTORING_SUMMARY.md  bench_echo.go  bench_echo_stress.go  bench_http.go  bench_http2.go  bench_http2.sh  bench_mcp_performance.py  bench_subinterpreter_scaling.py  fastapi_reference.py  go.mod  handlers_1mrc.py  run_benchmarks.sh  run_cpp_http1_benchmarks.sh  run_http1_benchmarks.sh  server_process_pool.py  simple_benchmark.py
benchmarks/1mrc/: GUIDE.md  README.md  wrk_1mrc.lua
benchmarks/CPM_modules/: Findlibuv.cmake  Findmimalloc.cmake  Findnghttp2.cmake  Findsimdjson.cmake  Findzstd.cmake
benchmarks/comparisons/: WHY_CPP_IS_SLOW.md  WHY_SO_SLOW.md  compare_with_drogon.md  install_and_compare_drogon.sh
benchmarks/drogon_bench/: CMakeLists.txt  main.cpp
benchmarks/drogon_comparison/: CMakeLists.txt  drogon_benchmark.cpp
benchmarks/fasterapi/: bench_codecs.py  bench_complete_system.py  bench_fasterapi_vs_fastapi.py  bench_futures.py  bench_hpack.cpp  bench_http1_parser.cpp  bench_http3.cpp  bench_pool.py  bench_pure_cpp.cpp  bench_router.cpp  bench_vs_fastapi.py  runner.py
benchmarks/micro/: bench_binary_kwargs.py  queue_bench.cpp  ring_buffer_bench.cpp
benchmarks/python_interop/: bench_gil_strategies.cpp  bench_queue_performance.cpp
benchmarks/techempower/: run_techempower_tests.sh  techempower_benchmarks.py  techempower_concurrent.cpp  techempower_cpp.cpp  techempower_fastapi.py  techempower_http2.cpp  techempower_sim.py
benchmarks/tests/: test_http1_native  test_http2_native
benchmarks/tfb/: pipeline.lua  tfb_benchmark.sh
certs/: Makefile  server.crt  server.key
certs/CPM_modules/: Findlibuv.cmake  Findmimalloc.cmake  Findsimdjson.cmake  Findzstd.cmake
cmake/: CPM.cmake
docs/: CPP_SERVER_OPTIMIZATIONS.md  GETTING_STARTED.md  HTTP3_ALGORITHMS.md  MIGRATION_FROM_FASTAPI.md  README.md  WEBRTC_RELAY_PLAN.md  architecture.md  cpp_api_architecture.md  cpp_user_api.md  performance.md  postgresql.md  python_cpp_optimization.md
docs/archive/: 1MRC_CHALLENGE_COMPLETE.md  1MRC_FINAL_SUMMARY.md  1MRC_ULTIMATE_SUMMARY.md  ALGORITHM_IMPORT_COMPLETE.md  ALGORITHM_IMPORT_SUCCESS.md  ASYNC_FEATURES.md  ASYNC_IO_COMPLETE.md  ASYNC_IO_DEBUG.md  ASYNC_IO_REAL_PROBLEM.md  ASYNC_IO_STATUS.md  BENCHMARK_COMPLETION.md  BENCHMARK_RESULTS.md  COMPLETE_SYSTEM.md  FEATURES.md  FILE_MANIFEST.md  FINAL_BENCHMARKS.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FUTURE_PERFORMANCE.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LIBRARY_INTEGRATION_STRATEGY.md  MAKE_IT_FASTER.md  MASTER_SUMMARY.md  MCP_FINAL_SUMMARY.md  NATIVE_TYPES_COMPLETE.md  NATIVE_TYPES_DESIGN.md  OPTIMIZATIONS_IMPLEMENTED.md  OPTIMIZATIONS_SUMMARY.md  OPTIMIZATION_OPPORTUNITIES.md  OPTIMIZATION_PLAN.md  OVERALL_STATUS.md  PRODUCTION_GUIDE.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  (+13 more)
examples/: README.md  admin_server.py  async_demo.py  async_http_demo.py  basic_app.py  complete_demo.py  cpp_app_demo.cpp  data_server.py  fastapi_example.py  fastapi_on_fasterapi_demo.py  file_upload_example.cpp  full_integration.py  hello_world  hello_world.cpp  http2_demo.py  http3_config_demo.py  http3_server.cpp  json_api_example.cpp  math_server.py  mcp_client_example.py  mcp_proxy_example.py  mcp_secure_server.py  mcp_server_example.py  middleware_example.cpp  minimal_test.py  pg_example.py  production_app.py  pure_cpp_server.cpp  realtime_demo.py  rest_api_example.cpp  run_cpp_fastapi_server.py  run_fastapi_server.py  simple_cpp_server.py  simple_http2_test.py  simple_http_test.py  simple_test  simple_test.cpp  sse_demo.py  streaming_example.cpp  test_params.py  (+10 more)
fasterapi/: __init__.py  _fastapi_native.h  _fastapi_native.pxd  _fastapi_native.pyx  background.py  datastructures.py  depends.py  exceptions.py  fastapi_compat.py  fastapi_server.py  negotiation.py  params.py  responses.py  routing.py  staticfiles.py  status.py  templating.py  test_handlers.py  testclient.py  websockets.py
logs/: 1mrc_fasterapi_20251020_003510.txt  1mrc_fasterapi_20251020_004250.txt  1mrc_fasterapi_20251020_010855.txt
scripts/: convert_huffman_table.py
tests/: README_E2E_TESTS.md  TESTING_GUIDE.md  TEST_SUMMARY.md  benchmark_server.py  conftest.py  debug_qpack.cpp  e2e_cpp_api_test.py  e2e_fasterapi_server.py  e2e_fasterapi_tests.py  e2e_python_api_test.py  integration_test.py  manual_param_test.sh  quick_param_test.py  run_e2e_tests.sh  run_future_tests.py  run_python_param_tests.sh  test_app_crash_debug.cpp  test_app_destructor.cpp  test_app_http3_e2e.cpp  test_async_combinators.py  test_async_handlers.cpp  test_body_buffer_arena.cpp  test_content_negotiation.py  test_coro_task.cpp  test_cors_middleware.py  test_cpp_server_quick.py  test_dropin_compatibility.py  test_e2e_cpp_comprehensive.py  test_e2e_python_comprehensive.py  test_event_loop_echo  test_event_loop_echo.cpp  test_exception_handlers.py  test_executor.cpp  test_fastapi_comprehensive.py  test_fastapi_path_parameters.py  test_fastapi_shim.py  test_fasterapi_python_server.py  test_futures.py  test_gzip_middleware.py  test_h2_server_push.cpp  (+72 more)
(+505 files in other folders)
